SET(CORE_HEADER_FILES
	application.h
	shader.h
)

SET(CORE_LIBRARY_FILES
	application.cpp
	shader.cpp
)

ADD_LIBRARY(core STATIC ${CORE_HEADER_FILES} ${CORE_LIBRARY_FILES})
SET_PROPERTY(TARGET core PROPERTY FOLDER "CORE")
TARGET_LINK_LIBRARIES(core glad glfw opengl32 ${ADDITIONAL_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})