SET(CORE_HEADER_FILES
	application.h
	shader.h
	stb_image.h
)

SET(CORE_LIBRARY_FILES
	application.cpp
	shader.cpp
)

ADD_LIBRARY(core STATIC ${CORE_HEADER_FILES} ${CORE_LIBRARY_FILES})
SET_PROPERTY(TARGET core PROPERTY FOLDER "CORE")
TARGET_LINK_LIBRARIES(core glad glfw glm ${ADDITIONAL_LIBRARIES})

if (WIN32)
    TARGET_LINK_LIBRARIES(core opengl32 ${ADDITIONAL_LIBRARIES})
endif()

TARGET_INCLUDE_DIRECTORIES(core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})